MIFOSADMIN-170 allow builds to be parallelized - use jetty plugin instead of cargo plugin jetty plugin is easier to configure and results in less complicted pom